fixed spacing with labels on cc calculator

--- a/src/styles/icon.styles.scss
+++ b/src/styles/icon.styles.scss
@@ -3,6 +3,10 @@
     margin-right: 10px;
 }
 
+.label-icon{
+    margin-left: 7px;
+}
+
 .danger-icon {
     color: red;
 }
